Transition to Parcel

--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
+<html>
   <Head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />                     <!--Don't understand-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    <!--Don't understand-->
+    <link rel="stylesheet" href="/src/css/main.css" />
     <title>Brems website!</title>
-    <link rel="shortcut icon" type="image/png" href="./favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="./src/img/favicon.png" />
   </Head>
   <body>
     <header id="main-header">
