--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
 
       <div class="box circle">
-        <h1>Random vet project uit mijn bubbel</h1>
+        <h1>Mooie projecten van mooie mensen</h1>
       </div>
 
       <div class="box square">
@@ -25,6 +25,10 @@
 
       <div class="box circle">
         <h1>Vogeltjes!</h1>
+      </div>
+
+      <div class="box square">
+        <h1>Onze wereld in data</h1>
       </div>
 
     </div>
