--- a/index.html
+++ b/index.html
@@ -9,32 +9,8 @@
     <link rel="shortcut icon" type="image/png" href="./src/img/favicon.png" />
   </Head>
   <body>
-    <div id="container-index">
-
-      <div class="box square">
-        <a href="https://soundcloud.com/hersenspinsels"><h1>Spraak memos</h1></a>
-      </div>
-
-      <div class="box circle">
-        <h1>Mooie projecten van mooie mensen</h1>
-      </div>
-
-      <div class="box square">
-        <h1>Muziek</h1>
-      </div>
-
-      <div class="box circle">
-        <h1>Vogeltjes!</h1>
-      </div>
-
-      <div class="box square">
-        <h1>Onze wereld in data</h1>
-      </div>
-
-    </div>
-
     <footer id="main-footer">
-    <p><a href="https://bramdelisse.me">Wie ben ik?</a> | <a href="mailto:bram.delisse@pm.me">bram.delisse@pm.me</a> | &copy; <a href="https://en.wikipedia.org/wiki/2022">2022</a></p>
+    <p>Hier gaat iets moois komen | bram.delisse@pm.me | &copy; 2022</p>
     </footer>
   </body>
 </html>
