--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />                     <!--Don't understand-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />    <!--Don't understand-->
     <link rel="stylesheet" href="/src/css/main.css" />
-    <title>Ik kan niet alles hebben... Maar ik heb wel een eigen website!</title>
+    <title>Bram's website</title>
     <link rel="shortcut icon" type="image/png" href="./src/img/favicon.png" />
   </Head>
   <body>
