Include datazwaluw in footer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </Head>
   <body>
     <footer id="main-footer">
-    <p>Hier gaat iets moois komen | bram.delisse@pm.me | &copy; 2022</p>
+    <p>Hier gaat iets moois komen | bram.delisse@pm.me | <a href="https://datazwaluw.nl">Mijn bedrijf dataZwaluw</a>
     </footer>
   </body>
 </html>
